--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "alexa-skill-oauth",
+  "name": "your-project",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "express": "^4.17.1",
+    "crypto": "^1.0.1"
+  }
 }
