--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon api/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "express": "^4.21.2"
   }
 }
